Instalação do plugin gitsigns